@@ -4,6 +4,7 @@ Changes
 1.1.4 (?)
 ---------
 - Convert 'long' in schemas to 'int' (#101).
+- Carefully map Python schema to the possibly munged internal schema (#105).
 
 1.1.3 (2014-03-23)
 ------------------
